--- a/generate/test.tmpl
+++ b/generate/test.tmpl
@@ -32,6 +32,13 @@ func Test{{ $StructName }}{{ .Dir }}(t *testing.T) {
 		`{{- $val -}}`: true,
 	{{- end }}
 	}
+	{{- if .HasTable}}
+	    testsTable := map[string]string{
+	    {{- range $index, $val := .TestTableOK}}
+            `{{- $val.Test -}}`: `{{- $val.Table -}}`,
+        {{- end }}
+        }
+	{{- end}}
 	parser := {{- if .ModeOther}} &{{ .Dir }}{{- else }} &parsers{{- end }}.{{ $StructName }}{}
 	for command, shouldPass := range tests {
 		t.Run(command, func(t *testing.T) {
@@ -79,7 +86,46 @@ func Test{{ $StructName }}{{ .Dir }}(t *testing.T) {
 			}
 		})
 	}
+	{{- if .HasTable}}
+	for command, expected := range testsTable {
+        t.Run(command, func(t *testing.T) {
+        line :=strings.TrimSpace(command)
+        lines := strings.SplitN(line,"\n", -1)
+        var err error
+        parser.Init()
+        if len(lines)> 1{
+            for _,line = range(lines){
+              line = strings.TrimSpace(line)
+                if err=ProcessLine(line, parser);err!=nil{
+                    break
+                }
+            }
+        }else{
+            err = ProcessLine(line, parser)
+        }
+            if err != nil {
+                t.Errorf(err.Error())
+                return
+            }
+            result, err := parser.Result()
+            if err != nil {
+                t.Errorf(err.Error())
+                return
+            }
+            var returnLine string
+            if result[0].Comment == "" {
+                returnLine = result[0].Data
+            } else {
+                returnLine = fmt.Sprintf("%s # %s", result[0].Data, result[0].Comment)
+            }
+            if expected != returnLine {
+                t.Errorf(fmt.Sprintf("error: has [%s] expects [%s]", returnLine, expected))
+            }
+        })
+    }
+    {{- end}}
 }
+
 {{- if .HasAlias}}
 
 func TestAlias{{ $StructName }}{{ .Dir }}(t *testing.T) {
