BUILD/MINOR: fix test generation with quote_fail instrution
Signed-off-by: Vincent Gramer <vgramer@haproxy.com>

--- a/generate/test.tmpl
+++ b/generate/test.tmpl
@@ -29,7 +29,7 @@ func Test{{ $StructName }}{{ .Dir }}(t *testing.T) {
 		"{{- $val -}}": false,
 	{{- end }}
 	{{- range $index, $val := .TestFailEscaped}}
-		`{{- $val -}}`: true,
+		`{{- $val -}}`: false,
 	{{- end }}
 	}
 	{{- if .HasTable}}
